# simpe_server_cpp

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  detector.hpp  http_headers.cpp  http_headers.h  loaderio-cd7eafd004b92fe9a9f469bd78352679.txt  main.cpp  mid_results.md  session.cpp  session.h  simple_server_cpp
